Fix white spaces between inline items in baseline
These gaps include “Space Character” size.

--- a/src/css/footer/footlinks.css
+++ b/src/css/footer/footlinks.css
@@ -11,6 +11,6 @@
 
   display: inline;
   display: var(--display);
-  margin-right: 0.75rem;
+  margin-right: 0.5rem;
   margin-right: var(--width-gap-small);
 }
