--- a/src/css/header/pages.css
+++ b/src/css/header/pages.css
@@ -13,7 +13,7 @@
 
   display: inline;
   display: var(--display);
-  margin-right: 0.75rem;
+  margin-right: 0.5rem;
   margin-right: var(--width-gap-small);
 }
 
